# MCP

./: .env.example  .gitignore  DEVELOPER_FEATURES.md  pyproject.toml  run_zentao_mcp.py  快速入门.md  禅道MCP使用手册.md
api/: crawler.py  zentao_dev_docs_all.json
src/zentao_mcp/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
test/: test_zentao_client.py
